--- a/1- Currency/CSS/Style.css
+++ b/1- Currency/CSS/Style.css
@@ -81,18 +81,28 @@ body
     /* float: left; */
 }
 
-.nav ul
-{
-    display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
-    text-decoration: none;    
+@media (max-width: 1200px) {
+  .nav {
+    width: 80%;
+  }
 }
 
-.nav ul li
-{
-    display: flex;     
-    align-items: center;
+@media (max-width: 673px) {
+  .nav {
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+    font-size: small;
+  }
+}
+
+@media (max-width: 466px) {
+  .nav {
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+    font-size: xx-small;
+  }
 }
 
 .currencies
@@ -113,6 +123,12 @@ body
 }
 
 /* Small */
+@media (max-width: 991px) {
+  .currencies {
+    width: 80%;
+  }
+}
+
 @media (max-width: 760px) {
   .currencies {
     width: 80%;
@@ -230,4 +246,35 @@ body
   align-items: center;
   padding: 20px;
   overflow: hidden;
+}
+
+@media (max-width: 993px) 
+{
+  .currencies .output
+  {
+    width:240px;
+  }
+}
+
+@media (max-width: 390px) {
+  .currencies {
+    width: 100%;
+  }
+
+  .currencies .output
+  {
+    width:200px;
+  }
+}
+
+
+@media (max-width: 360px) {
+  .currencies {
+    width: 100%;
+  }
+
+  .currencies .output
+  {
+    width:130px;
+  }
 }
