--- a/1- Currency/CSS/Style.css
+++ b/1- Currency/CSS/Style.css
@@ -61,7 +61,7 @@ body
 
 .nav
 {
-    background-color: black;
+    background-color: #620d376;
     padding-left: 40px;
     padding-right: 40px;
     /* padding-top: 10px; */
